[tool.poetry]
name = "apex-limiter"
version = "0.1.0"
description = "A high-performance, scalable rate limiter using Redis and Sliding Window algorithm."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apex_limiter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# Dev dependencies for example app
fastapi = {version = "^0.108.0", optional = true}
uvicorn = {version = "^0.25.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"
mypy = "^1.8.0"
fakeredis = {extras = ["aioredis"], version = "^2.21.0"}

[tool.poetry.extras]
fastapi = ["fastapi", "uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false